--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/VI Web.loader.js";
+      var loaderUrl = buildUrl + "/New folder (4).loader.js";
       var config = {
-        dataUrl: buildUrl + "/VI Web.data.br",
-        frameworkUrl: buildUrl + "/VI Web.framework.js.br",
-        codeUrl: buildUrl + "/VI Web.wasm.br",
+        dataUrl: buildUrl + "/New folder (4).data.br",
+        frameworkUrl: buildUrl + "/New folder (4).framework.js.br",
+        codeUrl: buildUrl + "/New folder (4).wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "CCRP VI Client",
