--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/New folder (4).loader.js";
       var config = {
-        dataUrl: buildUrl + "/New folder (4).data.br",
-        frameworkUrl: buildUrl + "/New folder (4).framework.js.br",
-        codeUrl: buildUrl + "/New folder (4).wasm.br",
+        dataUrl: buildUrl + "/New folder (4).data",
+        frameworkUrl: buildUrl + "/New folder (4).framework.js",
+        codeUrl: buildUrl + "/New folder (4).wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "CCRP VI Client",
